# bbwebservicce

./: README.md
bbwebservice-0.0.3/: LICENSE  README.md  setup.cfg
bbwebservice-0.0.3/src/bbwebservice/: __init__.py  config_loader.py  core.py  http_parser.py  webserver.py
bbwebservice-0.0.3/src/bbwebservice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
