[metadata]
name = bbwebservice
version = 0.0.3
author = Lukas
author_email = lukasogwalker@gmail.com
description = A bare bone webserver
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

